TrainerAss/app/src/main/java/air/foi/hr/trainerassistant/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_91\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant
-d
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java
<---- end of javadoc command ---->
Loading source file C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java...
Constructing Javadoc information...
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:3: error: package android.app does not exist
import android.app.ProgressDialog;
                  ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:4: error: package android.content does not exist
import android.content.Intent;
                      ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:5: error: package android.os does not exist
import android.os.AsyncTask;
                 ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:6: error: package android.util does not exist
import android.util.Log;
                   ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:7: error: package android.view does not exist
import android.view.MenuItem;
                   ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:8: error: package android.view does not exist
import android.view.View;
                   ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:9: error: package android.widget does not exist
import android.widget.Button;
                     ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:10: error: package android.widget does not exist
import android.widget.EditText;
                     ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:12: error: package air.foi.hr.trainerassistant.base does not exist
import air.foi.hr.trainerassistant.base.BaseActivity;
                                       ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:14: error: cannot find symbol
public class MainActivity extends BaseActivity implements View.OnClickListener{
                                  ^
  symbol: class BaseActivity
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:14: error: package View does not exist
public class MainActivity extends BaseActivity implements View.OnClickListener{
                                                              ^
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:16: error: cannot find symbol
    private EditText korisnicko_ime, lozinka;
            ^
  symbol:   class EditText
  location: class MainActivity
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:17: error: cannot find symbol
    private Button prijava, register;
            ^
  symbol:   class Button
  location: class MainActivity
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:18: error: cannot find symbol
    private ProgressDialog pDialog;
            ^
  symbol:   class ProgressDialog
  location: class MainActivity
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:41: error: cannot find symbol
    public void onClick(View v) {
                        ^
  symbol:   class View
  location: class MainActivity
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\MainActivity.java:61: error: cannot find symbol
    private class LoginTask extends AsyncTask<RequestPackage, String, String>{
                                    ^
  symbol:   class AsyncTask
  location: class MainActivity
C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\RequestPackage.java:3: error: package org.json does not exist
import org.json.JSONArray;
               ^
Standard Doclet version 1.8.0_91
Building tree for all the packages and classes...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\MainActivity.html...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\package-frame.html...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\package-summary.html...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\allclasses-frame.html...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\allclasses-noframe.html...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\index.html...
Generating C:\Users\anto_\Documents\FOI\TOMANT ISPITI priprema\TrainerAssistant\TrainerAss\app\src\main\java\air\foi\hr\trainerassistant\doc\stylesheet.css...
17 warnings
